erDiagram
    PARTY {
        BIGINT id PK
        string name
        string email
        string city
        string province
    }

    CLIENT {
        BIGINT id PK,FK
        string dni
        string code
        string payment_method
        boolean active
    }

    SUPPLIER {
        BIGINT id PK,FK
        string tax_id
        string code
        boolean active
    }

    ITEM_FAMILIES {
        string code PK
        string name
    }

    ITEM_CATEGORIES {
        string code PK
        string name
    }

    UNITS {
        string symbol PK
        string name
    }

    ITEM {
        BIGINT id PK
        string code
        string description
        decimal cost_price
        decimal sale_price
        decimal iva_percent
        int current_stock
        int minimum_stock
    }

    BUSINESS_DOCUMENT {
        BIGINT id PK
        date doc_date
        string code
        decimal subtotal
        decimal taxes
        decimal total
    }

    DELIVERY_NOTE {
        BIGINT id PK,FK
        boolean delivered
        boolean invoiced
    }

    INVOICE {
        BIGINT id PK,FK
    }

    DOCUMENT_LINE {
        BIGINT id PK
        decimal quantity
        decimal unit_price
        decimal tax_rate
    }

    PARTY ||--|| CLIENT : inherits
    PARTY ||--|| SUPPLIER : inherits

    PARTY ||--o{ BUSINESS_DOCUMENT : owns
    BUSINESS_DOCUMENT ||--|| DELIVERY_NOTE : inherits
    BUSINESS_DOCUMENT ||--|| INVOICE : inherits
    BUSINESS_DOCUMENT ||--o{ DOCUMENT_LINE : contains

    ITEM ||--o{ DOCUMENT_LINE : referenced
    SUPPLIER ||--o{ ITEM : supplies
    ITEM_FAMILIES ||--o{ ITEM : groups
    ITEM_CATEGORIES ||--o{ ITEM : classifies
    UNITS ||--o{ ITEM : measured_as
